--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,58 @@
-.App {
-  text-align: center;
+:root {
+  --selected-color: darkorange;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
+  gap: 50px;
   display: flex;
   flex-direction: column;
+  margin: 20px 40px;
+}
+
+.planetary_system {
+  display: flex;
+  align-items: center;
+  margin: 37px 0;
+}
+
+.moons {
+  display: flex;
+}
+
+.quantity {
+  color: var(--selected-color);
+}
+
+.planet {
+  position: relative;
+  min-width: 100px;
+  min-height: 100px;
+  border-radius: 50%;
+  background: silver;
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-weight: 700;
+  transition: background-color 0.3s ease-out;
+}
+.moon {
+  margin-left: 50px;
+  min-width: 80px;
+  min-height: 80px;
+  border-radius: 50%;
+  background: darkblue;
   color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  transition: background-color 0.3s ease-out;
 }
-
-.App-link {
-  color: #61dafb;
+.planet .orbit {
+  position: absolute;
+  border: 2px solid var(--selected-color);
+  border-radius: 50%;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.moon.selected {
+  background: var(--selected-color);
 }
